Fix zendesk button mobile position

--- a/src/assets/stylesheets/application.scss
+++ b/src/assets/stylesheets/application.scss
@@ -61,7 +61,15 @@
 @import 'main';
 
 .zopim {
-  left: 0 !important;
+  left: 50% !important;
+  transform: translateX(-50%);
+}
+
+@media screen and (min-width: 768px) {
+  .zopim {
+    left: 0 !important;
+    transform: none;
+  }
 }
 
 .fixed-body {
